fix: hide intent feedback on smaller display (#8033)
* fix: hide intent feedback on smaller display

* chore: changed media query to use mixin

* chore: changed display

--- a/src/pages/tickets/detail/components/TicketMessages/Header.less
+++ b/src/pages/tickets/detail/components/TicketMessages/Header.less
@@ -1,4 +1,5 @@
 @import '~css/new/colors';
+@import '~css/new/mixins';
 
 :local .header {
   display: flex;
@@ -53,11 +54,17 @@
     color: darken(@ultraLightRed, 25%);
   }
 
-  .intents {
-    margin-left: auto;
-    margin-right: 10px;
-    .ticket-message:not(:hover) & {
-        display: none;
+  @media @large-desktops {
+    .intents {
+      margin-left: auto;
+      margin-right: 10px;
+      .ticket-message:hover & {
+        display:block;
+      }
     }
+  }
+
+  .intents {
+    display: none;
   }
 }
